# datarasta

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
datarasta/: __init__.py
datarasta/metrics/: __init__.py  completeness.py  core.py  distribution.py  freshness.py  uniqueness.py  validity.py
examples/: basic_usage.py
tests/: __init__.py  test_basic_imports.py  test_completeness.py
